--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "seed": "node scripts/seedStations.js",
     "seed:stations": "node scripts/seedStations.js",
-    "test:minio": "node scripts/testMinIO.js"
+    "test:minio": "node scripts/testMinIO.js",
+    "test:optimized-uploads": "node test-optimized-uploads.js"
   },
   "keywords": [
     "charging-station",
@@ -21,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.844.0",
+    "@aws-sdk/lib-storage": "^3.844.0",
     "@aws-sdk/s3-request-presigner": "^3.844.0",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
