--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,13 +31,13 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.515.0",
     "prop-types": "^15.8.1",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.58.0",
     "react-hot-toast": "^2.5.2",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.6.2",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.6.1"
@@ -55,6 +55,9 @@
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.5"
+  },
+  "overrides": {
+    "picomatch": "4.0.2"
   },
   "keywords": [
     "react",
