Made heavy edidits now uses presigned url to upload things

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,8 +9,7 @@
     "test": "jest",
     "seed": "node scripts/seedStations.js",
     "seed:stations": "node scripts/seedStations.js",
-    "test:minio": "node scripts/testMinIO.js",
-    "test:optimized-uploads": "node test-optimized-uploads.js"
+    "test:minio": "node scripts/testMinIO.js"
   },
   "keywords": [
     "charging-station",
