--- a/Backend/package.json
+++ b/Backend/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "minio": "^8.0.5",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
